# towercrane-axtrainer

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/features/ai-study-note/: api.ts
src/features/auth/: AuthScreen.tsx
src/features/ax-board/: api.ts
src/features/ax-study/: api.ts
src/shared/ui/lexical/: lexical-editor.tsx
src/widgets/ai-study-note/: AiStudyNoteModule.tsx
src/widgets/app-shell/: AppShell.tsx
src/widgets/ax-board/: AxBoardModule.tsx
src/widgets/ax-study/: AxStudyModule.tsx
src/widgets/creed/: CreedModule.tsx
src/widgets/home/: HomePage.tsx
